Fix overflow missing horizontal scroll

--- a/src/app/layout/styles/_content.scss
+++ b/src/app/layout/styles/_content.scss
@@ -42,7 +42,7 @@
 
     width: 100%;
     height: 100%;
-
+    overflow-x: hidden;
     flex: 1;
 }
 
